avoid contrast issue [no ci]

--- a/smoothness-weblib/src/main/resources/META-INF/resources/resources/css/smoothness.css
+++ b/smoothness-weblib/src/main/resources/META-INF/resources/resources/css/smoothness.css
@@ -607,7 +607,7 @@ input.date-input {
 #notification-bar {
     position: fixed;
     background-color: orange;
-    color: white;
+    color: black;
     width: 100%;
     text-align: center;
     font-size: 24px;
